--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "react/jsx-no-bind": 1,
     "react/jsx-uses-react": 1,
     "react/prefer-stateless-function": 0,
+    "object-curly-spacing": 1,
     
     // indentation
     "indent": [ 2, 2 ],
@@ -24,7 +25,7 @@
     
     "jsx-a11y/no-static-element-interactions": 0,
     import/no-unresolved: [2, { ignore: ['\.'] }],
-    import/extensions: [2, { "": "never" }],
+    import/extensions: [2, { "": "never" }]
   },
   "parserOptions": {
     "ecmaVersion": 6,
@@ -33,6 +34,6 @@
     }
   },
   "env": {
-        "browser": true,
+        "browser": true
     }
 }
