--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "react-scrollbar",
+  "name": "react-simple-scrollbar-component",
   "version": "1.0.0",
   "description": "The Simplest Scroll Area Component with custom scrollbar for React Js",
   "main": "./dist/react-scrollbar.js",
   "scripts": {
-    "prepublish": "npm run lint && npm run build && npm run getstyles",
-    "getstyles": "cp src/style_default.scss doc/examples && node-sass src/style_default.scss --output doc/examples",
+    "prepublish": "npm run lint && npm run build",
     "start": "webpack-dev-server --inline --hot --config webpack.dev.config.js",
     "build": "webpack --config webpack.publish.config.js",
     "compile": "babel src --out-dir out && node-sass src --output out",
@@ -43,6 +42,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "eslint": "^3.13.1",
@@ -51,13 +51,14 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "node-sass": "^4.3.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "node-sass": "^4.8.3",
     "react": "^15.4.2",
+    "react-dom": "^15.0.0||^14.0.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0",
-    "react-dom": "^15.0.0||^14.0.0"
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.2.0"
   },
   "peerDependencies": {
     "react": "^15.0.0||^14.0.0"
@@ -66,4 +67,3 @@
     "prop-types": "^15.6.0"
   }
 }
-
